ctypes_canapedll/CANapAPI_stripped.h

typedef unsigned long DWORD;
enum EnRecorderState
{
 e_RecConfigure, 
 e_RecActive,    
 e_RecRunning,   
 e_RecPaused,    
 e_Suspended     
};
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned long *TRecorderID;
typedef unsigned short TModulHdl;
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderName(TAsap3Hdl hdl,TRecorderID recorderID,char * recorderName, long *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderCount(TAsap3Hdl hdl, unsigned long *count);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderByIndex(TAsap3Hdl hdl, unsigned long index, TRecorderID *recorderID);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderByName(TAsap3Hdl hdl,char * recordername,TRecorderID *recorderID);
extern bool ASAP3_EXPORT CALL_CONV Asap3SelectRecorder(TAsap3Hdl hdl,TRecorderID recorderID);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetSelectedRecorder(TAsap3Hdl hdl,TRecorderID *recorderID);
extern bool ASAP3_EXPORT CALL_CONV Asap3RemoveRecorder(TAsap3Hdl hdl,TRecorderID recorderID);
                                                
extern bool ASAP3_EXPORT CALL_CONV Asap3EnableBusLoggingRecorderByModule(TAsap3Hdl hdl,  TRecorderID recorderID, TModulHdl module, int enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3EnableBusLoggingRecorderByNetWork(TAsap3Hdl hdl, TRecorderID recorderID, char* NetworkName, int enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsRecorderBusLoggingEnableByNetWork(TAsap3Hdl hdl, TRecorderID recorderID, char* NetworkName, int *enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsRecorderBusLoggingEnableByModule(TAsap3Hdl hdl, TRecorderID recorderID, TModulHdl module, int *enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderMdfFileName(TAsap3Hdl hdl,TRecorderID recorderID,char *FileName,DWORD *size);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetRecorderMdfFileName(TAsap3Hdl hdl,TRecorderID recorderID,char *FileName);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetRecorderDataReduction(TAsap3Hdl hdl,TRecorderID recorderID,int Reduction);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderDataReduction(TAsap3Hdl hdl,TRecorderID recorderID,int *Reduction);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderState(TAsap3Hdl hdl,TRecorderID recorderID,enum EnRecorderState *State);
extern bool ASAP3_EXPORT CALL_CONV Asap3PauseRecorder(TAsap3Hdl hdl,TRecorderID recorderID,bool Pause);
extern bool ASAP3_EXPORT CALL_CONV Asap3StartRecorder(TAsap3Hdl hdl,TRecorderID recorderID);
extern bool ASAP3_EXPORT CALL_CONV Asap3StopRecorder(TAsap3Hdl hdl,TRecorderID recorderID,bool save2Mdf);
extern bool ASAP3_EXPORT CALL_CONV Asap3EnableRecorder(TAsap3Hdl hdl,TRecorderID recorderID,bool enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsRecorderEnabled(TAsap3Hdl hdl,TRecorderID recorderID,bool *enabled);
extern bool ASAP3_EXPORT CALL_CONV Asap3ResetDataAcquisitionChnlsByModule(TAsap3Hdl hdl, TModulHdl hmod);
extern bool ASAP3_EXPORT CALL_CONV Asap3ResetDataAcquisitionChnls(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3TimeSync(TAsap3Hdl hdl,bool enabled);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsTimeSyncEnabled(TAsap3Hdl hdl,bool *enabled);
extern bool ASAP3_EXPORT CALL_CONV Asap3StartDataAcquisition(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3ConnectDataAcquisition(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3StartResumedDataAcquisition(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3StopDataAcquisition(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3DisconnectDataAcquisition(TAsap3Hdl hdl);
extern long ASAP3_EXPORT CALL_CONV Asap3GetFifoLevel(TAsap3Hdl hdl, TModulHdl module, unsigned short taskId);