ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 844
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderName", "stdcall"):
    Asap3GetRecorderName = _libs["CANapAPI64.dll"].get("Asap3GetRecorderName", "stdcall")
    Asap3GetRecorderName.argtypes = [TAsap3Hdl, TRecorderID, String, POINTER(c_long)]
    Asap3GetRecorderName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 845
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderCount", "stdcall"):
    Asap3GetRecorderCount = _libs["CANapAPI64.dll"].get("Asap3GetRecorderCount", "stdcall")
    Asap3GetRecorderCount.argtypes = [TAsap3Hdl, POINTER(c_ulong)]
    Asap3GetRecorderCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 846
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderByIndex", "stdcall"):
    Asap3GetRecorderByIndex = _libs["CANapAPI64.dll"].get("Asap3GetRecorderByIndex", "stdcall")
    Asap3GetRecorderByIndex.argtypes = [TAsap3Hdl, c_ulong, POINTER(TRecorderID)]
    Asap3GetRecorderByIndex.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 847
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderByName", "stdcall"):
    Asap3GetRecorderByName = _libs["CANapAPI64.dll"].get("Asap3GetRecorderByName", "stdcall")
    Asap3GetRecorderByName.argtypes = [TAsap3Hdl, String, POINTER(TRecorderID)]
    Asap3GetRecorderByName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 848
if _libs["CANapAPI64.dll"].has("Asap3SelectRecorder", "stdcall"):
    Asap3SelectRecorder = _libs["CANapAPI64.dll"].get("Asap3SelectRecorder", "stdcall")
    Asap3SelectRecorder.argtypes = [TAsap3Hdl, TRecorderID]
    Asap3SelectRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 849
if _libs["CANapAPI64.dll"].has("Asap3GetSelectedRecorder", "stdcall"):
    Asap3GetSelectedRecorder = _libs["CANapAPI64.dll"].get("Asap3GetSelectedRecorder", "stdcall")
    Asap3GetSelectedRecorder.argtypes = [TAsap3Hdl, POINTER(TRecorderID)]
    Asap3GetSelectedRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 850
if _libs["CANapAPI64.dll"].has("Asap3RemoveRecorder", "stdcall"):
    Asap3RemoveRecorder = _libs["CANapAPI64.dll"].get("Asap3RemoveRecorder", "stdcall")
    Asap3RemoveRecorder.argtypes = [TAsap3Hdl, TRecorderID]
    Asap3RemoveRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 851
if _libs["CANapAPI64.dll"].has("Asap3EnableBusLoggingRecorderByModule", "stdcall"):
    Asap3EnableBusLoggingRecorderByModule = _libs["CANapAPI64.dll"].get("Asap3EnableBusLoggingRecorderByModule", "stdcall")
    Asap3EnableBusLoggingRecorderByModule.argtypes = [TAsap3Hdl, TRecorderID, TModulHdl, c_int]
    Asap3EnableBusLoggingRecorderByModule.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 852
if _libs["CANapAPI64.dll"].has("Asap3EnableBusLoggingRecorderByNetWork", "stdcall"):
    Asap3EnableBusLoggingRecorderByNetWork = _libs["CANapAPI64.dll"].get("Asap3EnableBusLoggingRecorderByNetWork", "stdcall")
    Asap3EnableBusLoggingRecorderByNetWork.argtypes = [TAsap3Hdl, TRecorderID, String, c_int]
    Asap3EnableBusLoggingRecorderByNetWork.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 853
if _libs["CANapAPI64.dll"].has("Asap3IsRecorderBusLoggingEnableByNetWork", "stdcall"):
    Asap3IsRecorderBusLoggingEnableByNetWork = _libs["CANapAPI64.dll"].get("Asap3IsRecorderBusLoggingEnableByNetWork", "stdcall")
    Asap3IsRecorderBusLoggingEnableByNetWork.argtypes = [TAsap3Hdl, TRecorderID, String, POINTER(c_int)]
    Asap3IsRecorderBusLoggingEnableByNetWork.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 854
if _libs["CANapAPI64.dll"].has("Asap3IsRecorderBusLoggingEnableByModule", "stdcall"):
    Asap3IsRecorderBusLoggingEnableByModule = _libs["CANapAPI64.dll"].get("Asap3IsRecorderBusLoggingEnableByModule", "stdcall")
    Asap3IsRecorderBusLoggingEnableByModule.argtypes = [TAsap3Hdl, TRecorderID, TModulHdl, POINTER(c_int)]
    Asap3IsRecorderBusLoggingEnableByModule.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 855
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderMdfFileName", "stdcall"):
    Asap3GetRecorderMdfFileName = _libs["CANapAPI64.dll"].get("Asap3GetRecorderMdfFileName", "stdcall")
    Asap3GetRecorderMdfFileName.argtypes = [TAsap3Hdl, TRecorderID, String, POINTER(DWORD)]
    Asap3GetRecorderMdfFileName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 856
if _libs["CANapAPI64.dll"].has("Asap3SetRecorderMdfFileName", "stdcall"):
    Asap3SetRecorderMdfFileName = _libs["CANapAPI64.dll"].get("Asap3SetRecorderMdfFileName", "stdcall")
    Asap3SetRecorderMdfFileName.argtypes = [TAsap3Hdl, TRecorderID, String]
    Asap3SetRecorderMdfFileName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 857
if _libs["CANapAPI64.dll"].has("Asap3SetRecorderDataReduction", "stdcall"):
    Asap3SetRecorderDataReduction = _libs["CANapAPI64.dll"].get("Asap3SetRecorderDataReduction", "stdcall")
    Asap3SetRecorderDataReduction.argtypes = [TAsap3Hdl, TRecorderID, c_int]
    Asap3SetRecorderDataReduction.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 858
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderDataReduction", "stdcall"):
    Asap3GetRecorderDataReduction = _libs["CANapAPI64.dll"].get("Asap3GetRecorderDataReduction", "stdcall")
    Asap3GetRecorderDataReduction.argtypes = [TAsap3Hdl, TRecorderID, POINTER(c_int)]
    Asap3GetRecorderDataReduction.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 859
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderState", "stdcall"):
    Asap3GetRecorderState = _libs["CANapAPI64.dll"].get("Asap3GetRecorderState", "stdcall")
    Asap3GetRecorderState.argtypes = [TAsap3Hdl, TRecorderID, POINTER(enum_EnRecorderState)]
    Asap3GetRecorderState.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 860
if _libs["CANapAPI64.dll"].has("Asap3PauseRecorder", "stdcall"):
    Asap3PauseRecorder = _libs["CANapAPI64.dll"].get("Asap3PauseRecorder", "stdcall")
    Asap3PauseRecorder.argtypes = [TAsap3Hdl, TRecorderID, c_bool]
    Asap3PauseRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 861
if _libs["CANapAPI64.dll"].has("Asap3StartRecorder", "stdcall"):
    Asap3StartRecorder = _libs["CANapAPI64.dll"].get("Asap3StartRecorder", "stdcall")
    Asap3StartRecorder.argtypes = [TAsap3Hdl, TRecorderID]
    Asap3StartRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 862
if _libs["CANapAPI64.dll"].has("Asap3StopRecorder", "stdcall"):
    Asap3StopRecorder = _libs["CANapAPI64.dll"].get("Asap3StopRecorder", "stdcall")
    Asap3StopRecorder.argtypes = [TAsap3Hdl, TRecorderID, c_bool]
    Asap3StopRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 863
if _libs["CANapAPI64.dll"].has("Asap3EnableRecorder", "stdcall"):
    Asap3EnableRecorder = _libs["CANapAPI64.dll"].get("Asap3EnableRecorder", "stdcall")
    Asap3EnableRecorder.argtypes = [TAsap3Hdl, TRecorderID, c_bool]
    Asap3EnableRecorder.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 864
if _libs["CANapAPI64.dll"].has("Asap3IsRecorderEnabled", "stdcall"):
    Asap3IsRecorderEnabled = _libs["CANapAPI64.dll"].get("Asap3IsRecorderEnabled", "stdcall")
    Asap3IsRecorderEnabled.argtypes = [TAsap3Hdl, TRecorderID, POINTER(c_bool)]
    Asap3IsRecorderEnabled.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 865
if _libs["CANapAPI64.dll"].has("Asap3ResetDataAcquisitionChnlsByModule", "stdcall"):
    Asap3ResetDataAcquisitionChnlsByModule = _libs["CANapAPI64.dll"].get("Asap3ResetDataAcquisitionChnlsByModule", "stdcall")
    Asap3ResetDataAcquisitionChnlsByModule.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3ResetDataAcquisitionChnlsByModule.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 866
if _libs["CANapAPI64.dll"].has("Asap3ResetDataAcquisitionChnls", "stdcall"):
    Asap3ResetDataAcquisitionChnls = _libs["CANapAPI64.dll"].get("Asap3ResetDataAcquisitionChnls", "stdcall")
    Asap3ResetDataAcquisitionChnls.argtypes = [TAsap3Hdl]
    Asap3ResetDataAcquisitionChnls.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 867
if _libs["CANapAPI64.dll"].has("Asap3TimeSync", "stdcall"):
    Asap3TimeSync = _libs["CANapAPI64.dll"].get("Asap3TimeSync", "stdcall")
    Asap3TimeSync.argtypes = [TAsap3Hdl, c_bool]
    Asap3TimeSync.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 868
if _libs["CANapAPI64.dll"].has("Asap3IsTimeSyncEnabled", "stdcall"):
    Asap3IsTimeSyncEnabled = _libs["CANapAPI64.dll"].get("Asap3IsTimeSyncEnabled", "stdcall")
    Asap3IsTimeSyncEnabled.argtypes = [TAsap3Hdl, POINTER(c_bool)]
    Asap3IsTimeSyncEnabled.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 869
if _libs["CANapAPI64.dll"].has("Asap3StartDataAcquisition", "stdcall"):
    Asap3StartDataAcquisition = _libs["CANapAPI64.dll"].get("Asap3StartDataAcquisition", "stdcall")
    Asap3StartDataAcquisition.argtypes = [TAsap3Hdl]
    Asap3StartDataAcquisition.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 870
if _libs["CANapAPI64.dll"].has("Asap3ConnectDataAcquisition", "stdcall"):
    Asap3ConnectDataAcquisition = _libs["CANapAPI64.dll"].get("Asap3ConnectDataAcquisition", "stdcall")
    Asap3ConnectDataAcquisition.argtypes = [TAsap3Hdl]
    Asap3ConnectDataAcquisition.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 871
if _libs["CANapAPI64.dll"].has("Asap3StartResumedDataAcquisition", "stdcall"):
    Asap3StartResumedDataAcquisition = _libs["CANapAPI64.dll"].get("Asap3StartResumedDataAcquisition", "stdcall")
    Asap3StartResumedDataAcquisition.argtypes = [TAsap3Hdl]
    Asap3StartResumedDataAcquisition.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 872
if _libs["CANapAPI64.dll"].has("Asap3StopDataAcquisition", "stdcall"):
    Asap3StopDataAcquisition = _libs["CANapAPI64.dll"].get("Asap3StopDataAcquisition", "stdcall")
    Asap3StopDataAcquisition.argtypes = [TAsap3Hdl]
    Asap3StopDataAcquisition.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 873
if _libs["CANapAPI64.dll"].has("Asap3DisconnectDataAcquisition", "stdcall"):
    Asap3DisconnectDataAcquisition = _libs["CANapAPI64.dll"].get("Asap3DisconnectDataAcquisition", "stdcall")
    Asap3DisconnectDataAcquisition.argtypes = [TAsap3Hdl]
    Asap3DisconnectDataAcquisition.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 874
if _libs["CANapAPI64.dll"].has("Asap3GetFifoLevel", "stdcall"):
    Asap3GetFifoLevel = _libs["CANapAPI64.dll"].get("Asap3GetFifoLevel", "stdcall")
    Asap3GetFifoLevel.argtypes = [TAsap3Hdl, TModulHdl, c_ushort]
    Asap3GetFifoLevel.restype = c_long
